# sports-system

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  FEATURES.md  PLAN.md  README.md  SEED.md  bts.jsonc  package.json  skills-lock.json
apps/api/: .env.example  .gitignore  alembic.ini  openapi.json  pyproject.toml  pyrightconfig.json  railway.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 077cc8a0151d_add_is_active_to_delegations.py  10eeacc3ca6c_add_narratives_and_ai_generations.py  14e69bc397ef_add_is_active_to_sports_modalities_add_.py  627739ebd29e_add_is_active_to_athletes.py  860d7d0d74c8_initial_schema.py  9c0109a8c2e7_add_league_delegations_table.py  a3f2c1e8b4d9_fastapi_users_fields.py  a4b5c6d7e8f9_rework_user_roles.py  a8b1a6464e9e_rename_weekstatus_enum_to_.py  b6e7e4e5368c_add_gender_to_athletes.py  bcbbe651409c_add_avatar_url_and_logo_url_fields.py  c5ccce3cc814_add_league_mode_and_timing_fields.py  c8921939a62c_add_avatar_and_logo_fields.py  cb6469abc2c1_drop_is_showcase_from_leagues.py  d4e5f6a7b8c9_rename_competition_weeks_to_competitions.py  e1a2b3c4d5e6_add_leagues_and_league_members.py  ef91d2b9ca95_add_delegation_status_and_league_.py  f2b3c4d5e6f7_add_league_id_to_scoped_tables.py  f89f84bdcaae_add_participation_request_to_.py
apps/api/app/: config.py  database.py  main.py
apps/api/app/core/: auth.py  deps.py  scheduler.py  security.py  sse.py
apps/api/app/models/: __init__.py  athlete.py  competition.py  delegation.py  enrollment.py  event.py  narrative.py  result.py  (+3 more)
apps/api/scripts/: generate_openapi.py
(+595 files in other folders)
